# py-partiql-parser

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  mypy.ini  pyproject.toml  setup.cfg
.github/workflows/: release.yml  test.yml
py_partiql_parser/: __init__.py  exceptions.py
py_partiql_parser/_internal/: case_insensitive_dict.py  clause_tokenizer.py  csv_converter.py  delete_parser.py  from_parser.py  insert_parser.py  json_parser.py  parser.py  select_parser.py  update_parser.py  utils.py  where_parser.py
py_partiql_parser/_packages/boto3/: types.py
tests/: __init__.py  test_aws_examples.py  test_csv_converter.py  test_dynamodb_examples.py  test_from_parser.py  test_json_encoder.py  test_json_parser.py  test_query_metadata.py  test_s3_examples.py  test_select_functions.py  test_select_parser.py  test_spec_examples.py  test_tokenizer.py  test_utils.py  test_where_parser.py
