[project]
name = "py-partiql-parser"
version = "0.4.1"
description = "Pure Python PartiQL Parser"
readme = "README.md"
keywords = ["pypartiql", "parser"]
license = {text = "MIT"}
authors = [{name="Bert Blommers", email="info@bertblommers.nl"}]

dependencies = []

[project.urls]
"Homepage" = "https://github.com/getmoto/py-partiql-parser"
"Bug Tracker" = "https://github.com/getmoto/py-partiql-parser/issues"
"ChangeLog" = "https://github.com/getmoto/py-partiql-parser/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "black==22.6.0",
    "flake8",
    "mypy==0.971",
    "pytest"
]

[build-system]
requires = [
    "setuptools>=59.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"
