[project]
name = "py-partiql-parser"
version = "0.5.4"
description = "Pure Python PartiQL Parser"
readme = "README.md"
keywords = ["pypartiql", "parser"]
license = {text = "MIT"}
authors = [{name="Bert Blommers", email="info@bertblommers.nl"}]

dependencies = []

[tool.hatch.build]
include = ["py_partiql_parser/*"]

[project.urls]
"Homepage" = "https://github.com/getmoto/py-partiql-parser"
"Bug Tracker" = "https://github.com/getmoto/py-partiql-parser/issues"
"ChangeLog" = "https://github.com/getmoto/py-partiql-parser/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "black==22.6.0",
    "flake8",
    "mypy",
    "pytest"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
