[project]
name = "py-partiql-parser"
version = "0.6.2"
description = "Pure Python PartiQL Parser"
readme = "README.md"
keywords = ["pypartiql", "parser"]
license = {text = "MIT"}
authors = [{name="Bert Blommers", email="info@bertblommers.nl"}]

dependencies = []

classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[tool.hatch.build]
include = ["py_partiql_parser/*"]

[project.urls]
"Homepage" = "https://github.com/getmoto/py-partiql-parser"
"Bug Tracker" = "https://github.com/getmoto/py-partiql-parser/issues"
"ChangeLog" = "https://github.com/getmoto/py-partiql-parser/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "black==22.6.0",
    "flake8",
    "mypy",
    "pytest"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
